# XVL

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: docker-test.yaml  test-model.yml
Desktop/: annotation.py  archieve.py  image_analysis.py  load_succeful.py  main.py  menu.py  settings.py  telegram-bot.py  win_1.py  Оболочка.py
Learning/: clusters.py  crack.py  defusion.py  empty.py  generate_seam.py  manager.py
configs/: logging.yaml  train_configuration.yaml
data/training/: test.py
docker/: Dockerfile
notebooks/: yolo_train.ipynb
scripts/: train.py  upload_to_hf.py
src/: __init__.py  config.py  dataset.py
src/generators/: __init__.py  crack.py  empty.py  evaluator.py  generate_seam.py  incomplete_fusion.py  manager.py  markup_test.py  pore.py
src/generators/real_samples/: annotations.json
src/generators/test_samples/: test.py
src/gui/: dialog.py
src/inference/: predictor.py  visualizer.py
src/model/configs/: basic_config.yaml
src/model/inference/: predictor.py
src/model/utils/: download_dataset.py  download_weights.py
src/trainer/: checkpoint_manager.py  cmd_train.py  yolo_trainer.py
src/utils/: error_handler.py  exсeptions.py  logging_config.py
templates/: X-Ray_1.ui  X-Ray_1_5.ui  X-Ray_2.ui  X-Ray_Main.ui  annotation.ui  archieve.ui  settings.ui
tests/: Makefile  README.md  conftest.py
tests/integration/: test_integration_full.py
tests/mocks/: __init__.py  generators.py
tests/unit/: test_dialog.py  test_docker.py  test_integration.py  test_predictor.py
